# baton

./: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.web.json  vite.config.ts
scripts/: download-tmux.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: agents.rs  git.rs  handoff.rs  mcp.rs  mod.rs  projects.rs  sessions.rs  settings.rs  tasks.rs  terminal.rs  todos.rs
src-tauri/src/services/: agent.rs  git.rs  handoff.rs  ids.rs  mcp.rs  mod.rs  project.rs  redaction.rs  settings.rs  sqlite.rs  storage.rs  task.rs  terminal.rs  todo.rs
src/main/: index.ts
src/main/services/: AgentService.ts  GitService.ts  HandoffService.ts  McpService.ts  ProjectService.ts  SQLiteService.ts  SettingsService.ts  StorageService.ts  TaskService.ts  TerminalService.ts  TodoService.ts  ids.ts  redaction.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  styles.css  tauri-preload.ts  vite-env.d.ts
src/renderer/src/components/: AddProjectDialog.tsx  AgentIcon.tsx  AgentSelectorDialog.tsx  BatonLogo.tsx  CommandPalette.tsx  CreateBatonPassSheet.tsx  ErrorBoundary.tsx  HandoffPreview.tsx  HandoffPromptDialog.tsx  KeyboardShortcutsDialog.tsx  McpScreen.tsx  QuickLaunchAgentDialog.tsx  SettingsScreen.tsx  Sidebar.tsx  TerminalPane.tsx  Workspace.tsx
src/renderer/src/store/: useAppStore.ts
src/shared/: types.ts
(+14 files in other folders)
